--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "kysely-codegen --url='env(POSTGRES_URL)' && next build",
+    "build": "kysely-codegen --url='env(POSTGRES_URL)' --dialect=postgres && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,12 +15,11 @@
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
-    "@vercel/postgres-kysely": "^0.6.0",
     "antd": "^5.10.1",
     "autoprefixer": "^10.4.16",
     "dayjs": "^1.11.10",
     "jsonwebtoken": "^9.0.2",
-    "kysely": "^0.26.3",
+    "kysely": "^0.27.2",
     "kysely-codegen": "^0.11.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.199",
+    "@types/pg": "^8.10.9",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.1",
     "prisma": "^5.4.2"
