--- a/.github/workflows/production_build.yml
+++ b/.github/workflows/production_build.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Install Netlify Plugin
+        run: yarn add -D @netlify/plugin-nextjs
+
       - name: Build NextJS
         run: yarn run build
         env:
@@ -34,7 +37,7 @@ jobs:
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
         with:
-          args: deploy --prod --dir=.next --message ${{ github.event.head_commit.message }}
+          args: deploy --prod --dir=.next --message '${{ github.event.head_commit.message }}'
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_PROD_SITE_ID }}
