--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/icons": "^5.2.6",
+    "@prisma/client": "^5.17.0",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
@@ -19,7 +20,7 @@
     "dayjs": "^1.11.10",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.2",
-    "kysely-codegen": "^0.11.0",
+    "kysely-codegen": "^0.15.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^14.0.1",
